[gd_scene load_steps=7 format=3 uid="uid://c3cl77r65dexu"]

[ext_resource type="Script" path="res://addons/cyclops_level_builder/gui/menu/editor_toolbar.gd" id="1_o71fd"]
[ext_resource type="Script" path="res://addons/cyclops_level_builder/gui/menu/action_popup_menu.gd" id="2_ni0c8"]
[ext_resource type="Texture2D" uid="uid://bs54uhn80ykrr" path="res://addons/cyclops_level_builder/art/icons/xray_normal.svg" id="3_ldp0l"]
[ext_resource type="Texture2D" uid="uid://dloyvoq8piwx0" path="res://addons/cyclops_level_builder/art/icons/snap.svg" id="4_begwr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o7kxq"]

[sub_resource type="Theme" id="Theme_0hxey"]
PanelContainer/styles/panel = SubResource("StyleBoxEmpty_o7kxq")

[node name="PanelContainer" type="PanelContainer"]
offset_right = 739.0
offset_bottom = 31.0
size_flags_horizontal = 3
theme = SubResource("Theme_0hxey")
script = ExtResource("1_o71fd")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MenuBar2" type="MenuBar" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MenuBar_old" type="MenuBar" parent="HBoxContainer"]
visible = false
layout_mode = 2
prefer_global_menu = false

[node name="Menu" type="PopupMenu" parent="HBoxContainer/MenuBar_old"]
unique_name_in_owner = true
item_count = 4
item_0/id = -1
item_0/separator = true
item_1/id = -1
item_1/separator = true
item_2/id = -1
item_2/separator = true
item_3/id = -1
item_3/separator = true
script = ExtResource("2_ni0c8")

[node name="ToolButtonContainer" type="HBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="bn_snap" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Snapping on/off"
toggle_mode = true
button_pressed = true
icon = ExtResource("4_begwr")

[node name="snap_options" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Snapping system"

[node name="display_mode" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "How the mesh is shown in the viewport."
selected = 1
item_count = 3
popup/item_0/text = "Wireframe"
popup/item_1/text = "Mesh"
popup/item_1/id = 1
popup/item_2/text = "Materials"
popup/item_2/id = 2

[node name="bn_xray" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Xray"
toggle_mode = true
icon = ExtResource("3_ldp0l")

[connection signal="toggled" from="HBoxContainer/bn_snap" to="." method="_on_bn_snap_toggled"]
[connection signal="item_selected" from="HBoxContainer/snap_options" to="." method="_on_snap_options_item_selected"]
[connection signal="item_selected" from="HBoxContainer/display_mode" to="." method="_on_display_mode_item_selected"]
[connection signal="toggled" from="HBoxContainer/bn_xray" to="." method="_on_bn_xray_toggled"]
